--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <img src="Assets/images/amr-taha-tN7QTFMFobc-unsplash.jpg" `
                                     class="d-block w-100 object-fit-cover" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Learn how to code</h5>
+                                    <h5>Learn how to code its fun</h5>
                                     <p>Some representative placeholder content for the first slide.</p>
                                 </div>
                             </div>
