--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         <h5 class="card-title">Laravel</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer .text below as a natural lead-in to
-                            additional content.</p>
+                            additional content. code everyday</p>
 
                     </div>
                 </div>
